the res/savemodified icon (save + indicator for something wasn't saved) is only availbale in savemodified_small and savemodified_large. I can add an res/savemodified_verylarge icon but this has to have also in the code base. In general I'm not a huge fan of the confuse icon(size) names, but I guess it's historical. please add the verylarge icon size to the code and I'll add them to the icon set(s).
Created attachment 131544 [details] Tango icon Here’s the missing Tango icon, fress off Inkscape.
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=98a03d9b0d13b8f811ccf8fc1a9b7f9469ed079c tdf#106224 Support extra large savemodified icon It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
thanks for all your review xisco