tdf#106224 Support extra large savemodified icon

For now just duplicated the large icon in Galaxy,
to satisfy the resource compiler.

Change-Id: Icf31df0185a1ec7f080d9600b2536bcaa5d0783e